--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -26,11 +26,11 @@
 
     <br/><br/>
 <hr>
-<br/>
+<!-- <br/>
 <form action="{%url'like_post'% post.pk}" method="post">
    {%csrf_token%}
   <button type="submit", name="post_id",value="{{post.id}}",class="btn btn-primary btn-sm">Like</button>
-</form>
+</form> -->
 
     <!-- Comment -->
 <h2>Comments</h2>
