--- a/blog/templates/blog/post_form.html
+++ b/blog/templates/blog/post_form.html
@@ -8,9 +8,11 @@
                 <legend class="border-bottom mb-4">Blog Post</legend>
                 {{ form|crispy }}
             </fieldset>
-            <div class="form-group">
-                <button class="btn btn-outline-info" type="submit">Post</button>
+            <center>
+            <div class="form-group my-3">
+                <button class="btn btn-success btn btn-primary btn-lg btn-block" type="submit">Post</button>
             </div>
+        </center>
         </form>
     </div>
 {% endblock content %}
