--- a/blog/static/blog/main.css
+++ b/blog/static/blog/main.css
@@ -1,11 +1,3 @@
-body {
-  background-size: 1800px 900px;
-  background-repeat: no-repeat;
-  background-position: top;
-  background-attachment: fixed;
-  color: #333333;
-  margin-top: 5rem;
-}
 
 h1, h2, h3, h4, h5, h6 {
   color: #444444;
@@ -16,7 +8,8 @@ ul {
 }
 
 .bg-steel {
-  background-color: #5f788a;
+  background-color: #000000;
+  opacity: 0.8;
 }
 
 .site-header .navbar-nav .nav-link {
@@ -32,13 +25,15 @@ ul {
 }
 
 .content-section {
-  opacity: 0.5;
+  opacity: 0.8;
   background: #ffffff;
   padding: 10px 20px;
   border: 1px solid #dddddd;
   border-radius: 10px;
   margin-bottom: 20px;
+  box-shadow: 5px 10px;
 }
+
 
 .article-title {
   color: #444444;
@@ -92,4 +87,17 @@ a.article-title:hover {
   margin-left: auto;
   margin-right: auto;
   width: 50%;
+}
+.content{
+  background-color: #4158D0;
+  background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
+  opacity: 0.8;
+  background: #ffffff;
+  padding: 10px 20px;
+  border: 1px solid #dddddd;
+  border-radius: 10px;
+  margin-bottom: 20px;
+  margin-top: 10%;
+  margin-left: 40%;
+  box-shadow: 5px 10px;
 }
