--- a/user/templates/user/profile.html
+++ b/user/templates/user/profile.html
@@ -1,34 +1,47 @@
-
 {% extends "blog/base.html"%}
 {%load crispy_forms_tags%}
+{%block hero %}
+<style>
+  body {
+    background: #70e1f5;
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #ffd194, #70e1f5);
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #ffd194, #70e1f5);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+
+  }
+</style>
+{% endblock hero %}
+<center>
 {% block content%}
-  <div class="content-section">
-      <div class="media">
-        <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">
-        <div class="media-body">
-          <h2 class="account-heading">{{ user.username }}</h2>
-          <p class="text-secondary">{{ user.email }}</p>
-        </div>
-      </div>
-      <!-- FORM HERE -->
-
-      <form method="POST" enctype="multipart/form-data">
-      <!-- csrf token to ensure security in form to protect it from attacks -->
-       {% csrf_token%}
-       <fieldset class="form-group">
-         <legend class="border-bottom mb-4">Profile Info</legend>
-         {{ u_form|crispy  }}
-         {{ p_form|crispy  }}
-        </fieldset>
-        <div class="form-group">
-          <button class="btn btn-outline-info" type="submit">Update</button>
-        </div>
-        <div class="border-top pt-3">
-            <a href="{%url 'login'%}">Already have accoutn Signin </a>
-        </div>
-
-
-      
-    </form>
+<div class="content-section">
+  <div class="media">
+    <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">
+    <div class="media-body">
+      <h2 class="account-heading">{{ user.username }}</h2>
+      <p class="text-secondary">{{ user.email }}</p>
     </div>
+  </div>
+  <!-- FORM HERE -->
+
+  <form method="POST" enctype="multipart/form-data">
+    <!-- csrf token to ensure security in form to protect it from attacks -->
+    {% csrf_token%}
+    <fieldset class="form-group">
+      <legend class="border-bottom mb-4">Profile Info</legend>
+      {{ u_form|crispy }}
+      {{ p_form|crispy }}
+    </fieldset>
+    <div class="form-group">
+      <button class="btn btn-outline-info" type="submit">Update</button>
+    </div>
+    
+
+
+
+  </form>
+</div>
 {%endblock content%}
+</center>
